Include android project

--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,17 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+
+
+
+#ANDROID
+*.iml
+**/.gradle
+**/local.properties
+**/.idea
+**/.idea/workspace.xml
+**/.idea/libraries
+**.DS_Store
+**/build
+**/captures
+**/.externalNativeBuild
