--- a/FSE/FSE.vcxproj
+++ b/FSE/FSE.vcxproj
@@ -223,6 +223,7 @@
     <ClInclude Include="FSE-ImGui\imgui-plotvar.h" />
     <ClInclude Include="FSEObject\FPSCounter.h" />
     <ClInclude Include="FSEObject\KillVolume.h" />
+    <ClInclude Include="ImageOutlineFinder.h" />
     <ClInclude Include="Network\NetworkedObject.h" />
     <ClInclude Include="Lights\Light.h" />
     <ClInclude Include="Lights\FSELightWorld.h" />
@@ -260,6 +261,7 @@
     <ClCompile Include="FSE-ImGui\imgui-plotvar.cpp" />
     <ClCompile Include="FSEObject\FPSCounter.cpp" />
     <ClCompile Include="FSEObject\KillVolume.cpp" />
+    <ClCompile Include="ImageOutlineFinder.cpp" />
     <ClCompile Include="Network\NetworkedObject.cpp" />
     <ClCompile Include="Lights\Light.cpp" />
     <ClCompile Include="Lights\FSELightWorld.cpp" />
