--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -294,6 +294,9 @@
     <ClInclude Include="..\imgui-1.51\stb_truetype.h">
       <Filter>Header Files\imgui-1.51</Filter>
     </ClInclude>
+    <ClInclude Include="ImageOutlineFinder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp">
@@ -396,6 +399,9 @@
       <Filter>Source Files\FSEObject</Filter>
     </ClCompile>
     <ClCompile Include="Serialize.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ImageOutlineFinder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
