--- a/FSE/FSE.vcxproj.filters
+++ b/FSE/FSE.vcxproj.filters
@@ -240,6 +240,9 @@
     <ClInclude Include="FSEObject\ChaiConsole.h">
       <Filter>Header Files\FSEObject</Filter>
     </ClInclude>
+    <ClInclude Include="ChaiInitClasses.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssetLoader.cpp">
