--- a/DemoProject/imgui.ini
+++ b/DemoProject/imgui.ini
@@ -3,3 +3,13 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][DebugMenu##MainMenu]
+Pos=297,4
+Size=200,100
+Collapsed=0
+
+[Window][DebugMenu##SettingsMenu]
+Pos=290,-1
+Size=200,100
+Collapsed=0
+
