DemoApp: Actually call spawnLevel

--- a/DemoProject/imgui.ini
+++ b/DemoProject/imgui.ini
@@ -9,7 +9,12 @@ Size=200,100
 Collapsed=0
 
 [Window][DebugMenu##SettingsMenu]
-Pos=290,-1
+Pos=290,3
 Size=200,100
+Collapsed=0
+
+[Window][SceneDebugger##MainMenu]
+Pos=1461,28
+Size=437,879
 Collapsed=0
 
